--- a/packages/genesys-spark-components/src/components/stable/gux-list/gux-list.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-list/gux-list.scss
@@ -5,4 +5,8 @@
   place-content: stretch flex-start;
   align-items: flex-start;
   padding: var(--gse-ui-menu-padding);
+
+  &:focus-within {
+    background-color: aquamarine;
+  }
 }
